[metadata]
name = colcon-ros-gradle
version = attr: colcon_ros_gradle.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-ros-gradle/milestones?state=closed
    GitHub = https://github.com/colcon/colcon-ros-gradle/
author = Esteve Fernandez
author_email = esteve@apache.org
maintainer = Esteve Fernandez
maintainer_email = esteve@apache.org
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to support Gradle packages.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
  colcon-core
  colcon-gradle
  # to set an environment variable when a package installs a library
  colcon-library-path
packages = find:
tests_require =
  flake8
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pyenchant
  pylint
  pytest
  pytest-cov
zip_safe = true

[options.entry_points]
colcon_argcomplete.argcomplete_completer =
    ros.gradle_args = colcon_ros_gradle.argcomplete_completer.ros_gradle_args:RosGradleArgcompleteCompleter
colcon_core.environment_variable =
    gradle_command = colcon_ros_gradle.task.ros_gradle:GRADLE_COMMAND_ENVIRONMENT_VARIABLE
    gradle_home = colcon_ros_gradle.task.ros_gradle:GRADLE_HOME_ENVIRONMENT_VARIABLE
colcon_core.package_identification =
    ros.gradle = colcon_ros_gradle.package_identification.ros_gradle:RosGradlePackageIdentification
colcon_core.task.build =
    ros.gradle = colcon_ros_gradle.task.ros_gradle.build:RosGradleBuildTask
colcon_core.task.test =
    ros.gradle = colcon_ros_gradle.task.ros_gradle.test:RosGradleTestTask

[flake8]
import-order-style = google
