[metadata]
name = colcon-ros-gradle
version = attr: colcon_ros_gradle.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-ros-gradle/milestones?state=closed
    GitHub = https://github.com/colcon/colcon-ros-gradle/
author = Esteve Fernandez
author_email = esteve@apache.org
maintainer = Esteve Fernandez
maintainer_email = esteve@apache.org
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to support Gradle packages.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
  colcon-core
  # to set an environment variable when a package installs a library
  colcon-library-path
  git+https://github.com/colcon/colcon-gradle
packages = find:
tests_require =
  flake8
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pyenchant
  pylint
  pytest
  pytest-cov
zip_safe = true

[options.entry_points]
colcon_argcomplete.argcomplete_completer =
    ament_gradle_args = colcon_ros_gradle.argcomplete_completer.ament_gradle_args:AmentGradleArgcompleteCompleter
colcon_core.environment_variable =
    gradle_command = colcon_ros_gradle.task.ament_gradle:GRADLE_COMMAND_ENVIRONMENT_VARIABLE
    gradle_home = colcon_ros_gradle.task.ament_gradle:GRADLE_HOME_ENVIRONMENT_VARIABLE
colcon_core.package_identification =
    ament_gradle = colcon_ros_gradle.package_identification.ament_gradle:AmentGradlePackageIdentification
colcon_core.task.build =
    ament_gradle = colcon_ros_gradle.task.ament_gradle.build:AmentGradleBuildTask

[flake8]
import-order-style = google
